#14865 - First steps to showcase redesign